Add postgres SSL support configuration

--- a/content/4.backend/2.configuration.md
+++ b/content/4.backend/2.configuration.md
@@ -91,6 +91,11 @@ Log all postgres queries in the console, this outputs sensitive data so DO NOT r
 
 Example: `false`
 
+### `postgres.ssl`
+Enable SSL support for postgres connections.
+
+Example: `true`
+
 ### `crypto.sessionSecret` - REQUIRED
 The secret used to sign sessions. Must be at least 32 characters long.
 
