spelling/grammar fixes

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -37,9 +37,9 @@ What's all the fuss?
   ::
   ::card{icon="material-symbols:hangout-video-off"}
   #title
-  No ADs
+  No Ads
   #description
-  movie-web will never show ADs, enjoy watching without interruptions.
+  movie-web will never show Ads, enjoy watching without interruptions.
   ::
   ::card{icon="ic:baseline-ondemand-video"}
   #title
