--- a/content/1.self-hosting/2.use-backend.md
+++ b/content/1.self-hosting/2.use-backend.md
@@ -3,7 +3,7 @@ title: 'Configure backend'
 ---
 # Configure your client with the backend
 
-If you would like to use an alternative backend server (The server responsible for saving user data across devices) then you can specify your own URL **without needing to host your own movie-web frontend!**
+If you would like to use an alternative backend server (the server responsible for saving user data across devices) then you can specify your own URL **without the need to host your own movie-web frontend!**
 
 ::alert{type="danger"}
 Changing your backend server will log you out of your account - make sure you have a copy of your 12-word passphrase saved safely in case you need to go back!
