--- a/content/1.self-hosting/4.troubleshooting.md
+++ b/content/1.self-hosting/4.troubleshooting.md
@@ -8,16 +8,16 @@ There is a possibility for something to go wrong while trying to deploy your own
 
 ## "Failed to find media, try again!" while searching
 
-This is likely a misconfigured TMDB api key. Verify that TMDB isn't working by going to `/admin` or `/#/admin`. Then clicking `Test TMDB`.
+This is likely a misconfigured TMDB API key. To verify that TMDB isn't working, go to `/admin` or `/#/admin`. Then click `Test TMDB`.
 
-If it succeeds, the TMDB api key is correct and it will be a different issue.
+If it succeeds, the TMDB API key is correct and it will be a different issue.
 
-If it does not work. Recheck your TMDB api key. **Make sure its the READ api key, not the normal api key.**
+If it does not work. Recheck your TMDB API key. **Make sure its the READ API key, not the normal API key.**
 
 
 ## Everything I try to watch fails
 
-This is likely a misconfigured worker. Verify that the workers are the issue by going to `/admin` or `/#/admin`. Then clicking `Test workers`.
+This is likely a misconfigured worker. To verify that the workers are the issue, go to `/admin` or `/#/admin`. Then click `Test workers`.
 
 You should have at least 1 worker registered.
 
@@ -26,7 +26,7 @@ If any worker fails the test, you should double check its URL and double check i
 
 ## I can't make an account or login
 
-This is likely misconfigured or broken backend. Verify the backend by going to `/admin` or `/#/admin`. Then clicking `Test backend`.
+This is likely misconfigured or broken backend. To verify the backend, go to `/admin` or `/#/admin`. Then click `Test backend`.
 
 It should give you the name that you have configured as backend with the latest version of the backend.
 
