--- a/content/2.proxy/2.configuration.md
+++ b/content/2.proxy/2.configuration.md
@@ -8,9 +8,9 @@ The environment variables for the proxy is different to adjust per platform. So 
 # Reference
 
 ### `TURNSTILE_SECRET`
-Turnstile secret key from the cloudflare dashboard. To enable turnstile completely you will also need `JWT_SECRET` configured.
+Turnstile secret key from the Cloudflare dashboard. To enable turnstile completely you will also need `JWT_SECRET` configured.
 
 If you want turnstile verification working correctly, you will also need to configure the turnstile key on the client, not just on the proxy.
 
 ### `JWT_SECRET`
-A jwt secret key. **Must be 32 characters long.** Can be any random secret.
+A JWT secret key. **Must be 32 characters long.** Can be any random secret.
