--- a/content/2.proxy/3.changelog.md
+++ b/content/2.proxy/3.changelog.md
@@ -11,5 +11,5 @@ title: 'Changelog'
  - bugfix where sometimes no response would be given at all due to race condition
 
 # Version 2.0.0
- - full rewrite, now supports multiple platforms: nodejs, cloudflare, aws lambda
- - standard proxy headers are no longer sent through. Which now doesn't send a client ip through anymore.
+ - full rewrite, now supports multiple platforms: nodejs, Cloudflare, AWS lambda
+ - standard proxy headers are no longer sent through. Which now doesn't send a client IP through anymore.
