--- a/content/3.client/2.tmdb.md
+++ b/content/3.client/2.tmdb.md
@@ -10,7 +10,7 @@ The API key is **free**, you just need to create an account.
 ::
 
 1. Create an account at https://www.themoviedb.org/signup
-1. You will be required to verify your email; click the link that you get sent to verify your account.
+1. You will be required to verify your email; click the link that you receive to verify your account.
 1. Go to https://www.themoviedb.org/settings/api/request to create a developer account.
 1. Read the terms and conditions and accept them.
 1. Fill out your details:
