--- a/content/3.client/3.configuration.md
+++ b/content/3.client/3.configuration.md
@@ -37,20 +37,20 @@ Example: <code style="overflow-wrap: anywhere">VITE_TMDB_READ_API_KEY=eyJhbGciOi
 
 ### `VITE_CORS_PROXY_URL` - REQUIRED
 
-This is where you put proxy URLS, you must have at least one. [Get one by following our guide](/proxy/deploy).
+This is where you put proxy URLs: you must have at least one. [Get one by following our guide](/proxy/deploy).
 
-You can add multiple workers by separating them by a comma, they will be load balanced using round robin method on the client.
+You can add multiple workers separated by a comma, they will be round-robin load balanced on the client.
 
-Worker url entries must **not** end with a slash.
+Worker URL entries must **not** end with a slash.
 
 ::alert{type="warning"}
-:icon{name="material-symbols:warning-rounded"} The example will not work for you, get your own
+:icon{name="material-symbols:warning-rounded"} The example is non-functional
 ::
 Example: `VITE_CORS_PROXY_URL=https://worker1.workers.dev,https://worker2.workers.dev`
 
 ### `VITE_DMCA_EMAIL`
 
-This is the DMCA email for on the DMCA page. If this config value is present, a new page will be made and linked in the footer, where it will mention how to handle dmca take-down requests. If the configuration value left empty, the page will not exist.
+This is the DMCA email for on the DMCA page. If this config value is present, a new page will be made and linked in the footer, where it will mention how to handle DMCA take-down requests. If the configuration value is left empty, the page will not exist.
 
 Example: `VITE_DMCA_EMAIL=dmca@example.com`
 
@@ -59,7 +59,7 @@ Default: `""`
 ### `VITE_NORMAL_ROUTER`
 
 The application has two routing modes: hash-router and history-router.
-Hash router is that every page is linked in the hash like so: `https://example.com/#/browse`.
+Hash router means every page is linked in the hash like so: `https://example.com/#/browse`.
 
 History router does routing without a hash like so: `https://example.com/browse`, this looks a lot nicer, but it requires that your hosting environment supports Single-Page-Application (SPA) redirects. If you don't know what that means, don't enable this.
 
@@ -74,7 +74,7 @@ This is the URL for the movie-web backend server which handles cross-device sync
 
 The backend server can be found at https://github.com/movie-web/backend and is offered as a [Docker](https://docs.docker.com/get-started/overview/) image for deployment.
 
-Backend url must **not** end with a slash.
+Backend URL must **not** end with a slash.
 
 Example: `VITE_BACKEND_URL=https://backend.example.com`
 
@@ -82,11 +82,11 @@ Default: `https://backend.movie-web.app`
 
 ### `VITE_DISALLOWED_IDS`
 
-In the unfortunate event that you're been sent a DMCA take down notice. You will need to somehow disable some pages. This configuration key will allow you to disable specific ids.
+In the unfortunate event that you've been sent a DMCA take down notice. You will need to disable some pages. This configuration key will allow you to disable specific IDs.
 
 For shows, it needs to be in this format: `series-<TMDB_ID>`. For movies the format is this: `movie-<TMDB_ID>`.
 
-The list is comma separated, you can add as many as needed.
+The list is comma separated; you can add as many as needed.
 
 Example: `VITE_DISALLOWED_IDS=series-123,movie-456`
 
@@ -94,7 +94,7 @@ Default: `""`
 
 ### `VITE_CDN_REPLACEMENTS`
 
-Sometimes you want to proxy a CDN. This is how you can easily replace a cdn url with your own.
+Sometimes you want to proxy a CDN. This is how you can easily replace a CDN URL with your own.
 
 The format is `<beforeA>:<afterA>,<beforeB>:<afterB>,...`
 
@@ -104,9 +104,9 @@ Default: `""`
 
 ### `VITE_TURNSTILE_KEY`
 
-The turnstile key for cloudflare captchas. It's used to authenticate request to proxy workers (or providers api).
+The turnstile key for Cloudflare CAPTCHAs. It's used to authenticate requests to proxy workers (or providers API).
 
-The proxy workers will need to be configured to accept these captcha tokens, otherwise it has no effect for security.
+The proxy workers will need to be configured to accept these CAPTCHA tokens, otherwise it has no effect for security.
 
 Example: `""`
 
@@ -120,7 +120,7 @@ Example: `""`
 **This key can only be configured through environment variables.**
 
 Set to `true` if you want to output a PWA application. Set to `false` or omit to get a normal web application.
-A PWA web application can be installed as an application to your phone or desktop computer, but can be tricky to manage and comes with a few footguns.
+A PWA web application can be installed as an application to your phone or desktop computer, but can be tricky to manage and comes with a few foot-guns.
 Make sure you know what you're doing before enabling this, it **cannot be disabled** after you've set it up once.
 
 Example: `VITE_PWA_ENABLED=no`
@@ -137,10 +137,9 @@ Example: `VITE_APP_DOMAIN=https://movie-web.app`
 ### `VITE_OPENSEARCH_ENABLED`
 **This key can only be configured through environment variables.**
 
-Whether to enable OpenSearch. (the feature that allows a user to add a search engine to their browser). A
-when enabling you **must** also set `VITE_APP_DOMAIN`.
+Whether to enable OpenSearch. (the feature that allows a user to add a search engine to their browser). When enabling you **must** also set `VITE_APP_DOMAIN`.
 
-`VITE_OPENSEARCH_ENABLED` must be set to `true` to be enabled. Anything else will be treated as turned off, it's case sensitive so `True` will also be disabled.
+`VITE_OPENSEARCH_ENABLED` must be set to `true` to be enabled. Anything else will be treated as turned off. It's case sensitive so `True` will also be disabled.
 
 Example: `VITE_OPENSEARCH_ENABLED=true`
 
