--- a/content/3.client/4.changelog.md
+++ b/content/3.client/4.changelog.md
@@ -9,54 +9,54 @@ title: 'Changelog'
  - Fix Ukrainian, Hindi and Toki Pona flags
 
 # Version 4.2.0
- - Add splashscreens for PWA
+ - Add splash-screens for PWA
  - Renamed captions to subtitles in translations
- - Add youtube-esque shortcuts for navigating video
+ - Add YouTube-esque shortcuts for navigating video
  - Fix error dialogue not showing actual error message but instead shows [Object object]
- - Gray subtitle color
- - Hide settings button on mobile when it shouldnt have shown
+ - Grey subtitle color
+ - Hide settings button on mobile when it shouldn't have shown
  - Fix Estonia and Nepal flag
  - Update provider package to 2.0.1
  - Superstream now split into showbox and febbox.
  - Fixed sidebar not highlighting last item on high screens
- - New translations: Hindi, Polish, Portuguese - Brazillian, Ukrainian
+ - New translations: Hindi, Polish, Portuguese - Brazilian, Ukrainian
  - Updates to translations: Czech, Estonian, German, Hebrew, Cambodian, Nepali, Swedish, Thai, Chinese, Minion
 
 # Version 4.1.3
  - Add support for downloading HLS playlists
- - Added cdn replacements configuration option
- - new translations: estonian, toki pona, spanish
- - Translation improvements: german, turkish, nepali, chinese
+ - Added CDN replacements configuration option
+ - new translations: Estonian, Toki Pona, Spanish
+ - Translation improvements: German, Turkish, Nepali, Chinese
 
 # Version 4.1.2
  - Improve bundle chunking
  - Add millionjs for faster react
  - Update all dependency versions
- - Translation improvements: czech, hebrew, german
+ - Translation improvements: Czech, Hebrew, German
  - Fix mobile controls not going away after some time
  - Improve poster quality
  - Fix "media not found" error not being shown
  - Add more information to the error details modal
 
 # Version 4.1.1
- - Fixed bug where settings toggles sometimes weren't usuable
+ - Fixed bug where settings toggles sometimes weren't usable
  - Fixed bug where captions were permanently enabled
  - Fixed some missing translations
- - Translation improvements: arabic, french, nepali, chinese
+ - Translation improvements: Arabic, French, Nepali, Chinese
 
 # Version 4.1.0
- - Added new translations: arabic, chinese, latvian, thai, nepali, dutch
- - Translation improvements: turkish, hebrew
+ - Added new translations: Arabic, Chinese, Latvian, Thai, Nepali, Dutch
+ - Translation improvements: Turkish, Hebrew
  - Fixed text directions for captions
  - Anti-tamper script has been removed and replaced with turnstile (this is the devtools blocked, you can use devtools again)
- - Added way to add the providers-api instead of proxies
+ - Added way to add the providers-API instead of proxies
 
 # Version 4.0.2
  - Added new translations: Hebrew, French, German, Swedish, Turkish.
  - Added minion joke language. Blame @jip_.
  - Thumbnail preview no longer goes under the next episode button.
  - Passphrase inputs are now actual password fields, so they may act nicer with password managers.
- - The player now remembers what your subtitle settings were, so no longer you need to keep selecting english everytime you watch.
+ - The player now remembers what your subtitle settings were, so no longer you need to keep selecting English every time you watch.
  - Fix home link not working with /s/:term shortcut.
  - Swedish flag is now an actual Swedish flag.
  - Fix for various layout issues with small width mobile screens.
@@ -69,7 +69,7 @@ If you are upgrading from a previous version, make sure to read [the upgrade gui
 
 ### Bug fixes
 - Fixed bug where video player overlays the controls on IOS.
-- Fixed bug where you are kicked out of the fullscreen when switching episode.
+- Fixed bug where you are kicked out of the full-screen when switching episode.
 - Fixed bug where you cannot select a different episode if first episode fails to load.
 
 ### Enhancements
@@ -81,7 +81,7 @@ If you are upgrading from a previous version, make sure to read [the upgrade gui
 - Subtitle delay can now be increased outside of the slider range by inputting manual numbers.
 - Movie and show URL's now include the name of the media in the link, makes it easier at a glance to see what a link is about.
 - Instructions on how to download are now given inside the app.
-- Chromecasting no longer shows captions on the web player (still doesnt show on cast receiver)
+- Chromecasting no longer shows captions on the web player (still doesn't show on cast receiver)
 - Chromecasting now supports HLS
 
 ### New features
