--- a/content/4.backend/1.deploy.md
+++ b/content/4.backend/1.deploy.md
@@ -3,7 +3,7 @@ title: 'Deploy'
 ---
 # Deploying the backend
 
-The only officially recognized hosting method is through Docker (or similar container runtimes).
+The only officially recognized hosting method is through Docker (or similar container run-times).
 
 It can be scaled horizontally to all your heart's content.
 
