--- a/content/4.backend/2.configuration.md
+++ b/content/4.backend/2.configuration.md
@@ -38,7 +38,7 @@ Port number that the HTTP server listens on.
 Example: `8080`
 
 ### `server.cors`
-Space seperated list of allowed origins.
+Space separated list of allowed origins.
 
 Example:
 ```
@@ -52,12 +52,12 @@ This overwrites the setting at `server.cors`.
 Example: `false`
 
 ### `server.trustProxy`
-Should the server trust reverse proxy headers? This is used to identify users for ratelimiting
+Should the server trust reverse proxy headers? This is used to identify users for rate-limiting
 
 Example: `false`
 
 ### `server.trustCloudflare`
-Should the server trust cloudflare IP headers? This is used to identify users for ratelimiting
+Should the server trust Cloudflare IP headers? This is used to identify users for rate-limiting
 
 Example: `false`
 
@@ -110,7 +110,7 @@ Example: `This is not an official instance of movie-web`
 
 ### `captcha.enabled`
 
-To protect your server from bot attacks, captcha's can be useful to enabled. If this is enabled, all other captcha related settings are required.
+To protect your server from bot attacks, CAPTCHAs can be useful to enabled. If this is enabled, all other captcha related settings are required.
 
 Example: `false`
 
@@ -128,12 +128,12 @@ Example: `2jf853z5bc63bvDb2323FAda`
 
 ### `ratelimits.enabled`
 
-To protect bot attacks or spammy users, you can enabled ratelimits. Make sure your ip headers are properly forwarded if you're using a reverse proxy. Also see `server.trustProxy`. If this is enabled, all other ratelimit related settings are required.
+To protect bot attacks or spammy users, you can enabled rate-limits. Make sure your IP headers are properly forwarded if you're using a reverse proxy. Also see `server.trustProxy`. If this is enabled, all other rate-limit related settings are required.
 
 Example: `false`
 
 ### `ratelimits.redisUrl`
 
-Redis connection URL for storing ratelimit data. Just uses plain redis without any modules.
+Redis connection URL for storing rate-limit data. Just uses plain Redis without any modules.
 
 Example: `redis://localhost:6379`
