--- a/content/4.backend/3.changelog.md
+++ b/content/4.backend/3.changelog.md
@@ -8,9 +8,9 @@ Bugfixes and optimization.
 
 For this update, you will need to run migrations.
 
-- Added option to trust cloudflare IP headers for ratelimits
+- Added option to trust Cloudflare IP headers for rate-limits
 - Removed unused table
-- Optimized prometheus metrics, should make less indexes
+- Optimized Prometheus metrics, should make less indexes
 
 
 # Version 1.1.5
@@ -21,5 +21,5 @@ Initial version of the backend.
 - Account creation/deletion endpoints
 - Endpoints for importing old account data
 - Endpoints for syncing data
-- Ratelimit system
+- Rate-limit system
 - Captcha system
