--- a/content/1.self-hosting/1.hosting-intro.md
+++ b/content/1.self-hosting/1.hosting-intro.md
@@ -11,23 +11,23 @@ There are a few configurations of hosting movie-web. Each with their own benefit
 **If you don't know what to choose, go with method 1.**
 
 ## Method 1 - Only host the frontend
-With this method, you only host the essential parts that make movie-web work. But keep using the account server from offical movie-web.
+With this method, you only host the essential parts that make movie-web work. But keep using the account server from official movie-web.
 This method is the easiest to self-host and is recommended for most users.
 
-1. [Setup the Proxy!](../2.proxy/1.deploy.md)
-2. [Setup the Client!](../3.client/1.deploy.md)
+1. [Set up the Proxy!](../2.proxy/1.deploy.md)
+2. [Set up the Client!](../3.client/1.deploy.md)
 
 ## Method 2 - Only host the account server
-If you want to own your own data, it's possible to selfhost just the account server and nothing else.
+If you want to own your own data, it's possible to self-host just the account server and nothing else.
 This method is only recommended if you have experience hosting databases or other similar stateful applications.
 
-1. [Setup the Backend!](../4.backend/1.deploy.md)
+1. [Set up the Backend!](../4.backend/1.deploy.md)
 2. [Configure the Client!](../3.client/1.deploy.md)
 
 ## Method 3 - Host everything
-If you want an instance that's completely isolated from official movie-web. You can selfhost all parts.
+If you want an instance that's completely isolated from official movie-web. You can self-host all parts.
 This method is not recommended for inexperienced hosters.
 
-1. [Setup the Proxy!](../2.proxy/1.deploy.md)
-2. [Setup the Backend!](../4.backend/1.deploy.md)
-3. [Setup the Client!](../3.client/1.deploy.md)
+1. [Set up the Proxy!](../2.proxy/1.deploy.md)
+2. [Set up the Backend!](../4.backend/1.deploy.md)
+3. [Set up the Client!](../3.client/1.deploy.md)
