--- a/content/3.client/0.introduction.md
+++ b/content/3.client/0.introduction.md
@@ -7,7 +7,7 @@ The client is what the main part of the application, it houses the interface and
 
 ## PWA
 
-The client can be optionally ran as a PWA. This can be hard to do correctly and really hard to reverse, so it's generally not recommended to do so if you don't have experience hosting PWA's.
+The client can be optionally run as a PWA. This can be hard to do correctly and really hard to reverse, so it's generally not recommended to do so if you don't have experience hosting PWAs.
 
 You can read more about it [here](../1.self-hosting/3.about-pwa.md).
 
