--- a/content/4.backend/0.introduction.md
+++ b/content/4.backend/0.introduction.md
@@ -7,16 +7,16 @@ The backend is essentially just an account server. There is not much more to it.
 
 ## Metrics
 
-The backend exposes prometheus metrics, it can be accessed on `/metrics`.
+The backend exposes Prometheus metrics, it can be accessed on `/metrics`.
 
 ## Security
 
 Optionally, there are a few security settings:
 - Recaptcha support, the server can verify Recaptcha v3 tokens on register and login.
-- Ratelimits, Some expensive endpoints have ratelimits, but only when enabled. This requires an additional redis connection.
+- Rate-limits. Some expensive endpoints have rate-limits, but only when enabled. This requires an additional Redis connection.
 
 ## Migrations
 
 To run migrations, You can use the command `pnpm migration:up` inside the docker container.
 
-Alternatively, you can enabled `postgres.migrateOnBoot` and it will be automatically migrated on boot.
+Alternatively, you can enabled `postgres.migrateOnBoot` and it will be migrated automatically on boot.
