Fix backend deploy docs

--- a/content/4.backend/1.deploy.md
+++ b/content/4.backend/1.deploy.md
@@ -31,7 +31,7 @@ docker run \
     ghcr.io/movie-web/backend:latest
 ```
 
-After running that command, your backend [_should_](../1.self-hosting/4.troubleshooting.md) now be available on `localhost:80`. if you want to be able to connect to the backend outside of your local network (for example sharing it with your friends), then you'll need set up to port forwarding.
+After running that command, your backend [_should_](../1.self-hosting/4.troubleshooting.md) now be available on `localhost:80`. If you want to be able to connect to the backend outside of your local network (for example sharing it with your friends), then you'll need set up to port forwarding.
 
 ## Method 2 - Railway (Easy)
 
