--- a/content/0.instances.md
+++ b/content/0.instances.md
@@ -30,6 +30,7 @@ The community maintains these trusted instances, meaning they are likely to be u
 * https://movie-web.x via [Unstoppable Domains](https://unstoppabledomains.com) and [IPFS](https://ipfs.tech) 💾
     - https://movie-web.x is only accessible using Brave, Opera or installing an [extension](https://unstoppabledomains.com/extension) to resolve unstoppable domains
     - If you cannot access https://movie-web.x try using a gateway: [Cloudflare](https://cloudflare-ipfs.com/ipns/k51qzi5uqu5diql6nkzokwdvz9511dp9itillc7xhixptq14tk1oz8agh3wrjd), [dweb.link](https://k51qzi5uqu5diql6nkzokwdvz9511dp9itillc7xhixptq14tk1oz8agh3wrjd.ipns.dweb.link), [cf-ipfs](https://k51qzi5uqu5diql6nkzokwdvz9511dp9itillc7xhixptq14tk1oz8agh3wrjd.ipns.cf-ipfs.com)
+* https://poopie-web.vercel.app by [Fluhfi] (https://github.com/fluffy29922) 💾🌐 
 
 ## Alternatives
 
