--- a/content/0.instances.md
+++ b/content/0.instances.md
@@ -27,6 +27,7 @@ The community maintains these trusted instances, meaning they are likely to be u
 - [stream.thehairy.me](https://stream.thehairy.me) by [thehairy - Mod](https://github.com/thehairy) » 💾🌐
 - [scootydooter](https://scootydooter.vercel.app) by [Toon - Contributor](https://github.com/Toon-arch) » 💾🌐
 - [movie-web-me](https://movie-web-me.vercel.app) by [Isra - Contributor](https://github.com/zisra) » 💾🌐
+- [mw-mohit](https://mw-mohit.vercel.app/) by [Mohit - Community Self Hoster](https://github.com/mohitbkl) » 💾🌐
 - [sudo-flix.lol](https://sudo-flix.lol) by [itzCozi - Community Self Hoster](https://gitlab.com/itzCozi) » 💾
 - [movie-web.x](https://movie-web.x) via [Unstoppable Domains](https://unstoppabledomains.com) and [IPFS](https://ipfs.tech) » 💾
     - [movie-web.x](https://movie-web.x) is only accessible using Brave, Opera or installing an [extension](https://unstoppabledomains.com/extension) to resolve unstoppable domains
