--- a/content/0.instances.md
+++ b/content/0.instances.md
@@ -25,6 +25,7 @@ The community maintains these trusted instances, meaning they are likely to be u
 | [scootydooter](https://scootydooter.vercel.app)   | [Toon - Contributor](https://github.com/Toon-arch)                                  | 💾🌐📱     |
 | [sudo-flix.lol](https://sudo-flix.lol)            | [itzCozi - Community Self Hoster](https://github.com/sudo-flix)                     | 💾📱      |
 | [movie-web.x](https://movie-web.x)                | [Unstoppable Domains](https://unstoppabledomains.com) and [IPFS](https://ipfs.tech) | 💾       |
+| [ezbox.lol](https://ezbox.lol)                    | [sharpxann - Community Self Hoster](https://github.com/semihofc)                    | 💾🌐      |
 
 ::alert{type="info"}
 [movie-web.x](https://movie-web.x) is only accessible using Brave, Opera or installing an [extension](https://unstoppabledomains.com/extension) to resolve unstoppable domains.
