Update 2.selfhost.md - changed to example.tld rather than what it was before
Changed the domain to example.tld

--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -29,7 +29,7 @@
        image: ghcr.io/movie-web/backend:latest
        restart: unless-stopped
        environment:
-         MWB_SERVER__CORS: "https://movie-backend.exorbgn.net https://movie.exorbgn.net http://10.2.6.8:80"
+         MWB_SERVER__CORS: "https://movie-backend.example.tld https://movie.example.tld"
          MWB_SERVER__PORT: 8080
          MWB_POSTGRES__CONNECTION: postgresql://movie_web_user:YourPasswordHere@postgres:5432/movie_web_backend
          MWB_CRYPTO__SESSION_SECRET: 32CHARACTERLONGSECRET
