type errors/5.extra/2.selfhost.md
Co-authored-by: William Oldham <github@binaryoverload.co.uk>

--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -1,4 +1,4 @@
-### Guide to full Self-Deployment of Movie-Web with Docker Compose
+### Guide to full Self-Deployment of movie-web with Docker Compose
 
 1. **Install Docker and Docker Compose:**
    
