--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -25,7 +25,7 @@
        networks:
          - movie-web-network
 
-     movie-web:
+     movie-web-backend:
        image: ghcr.io/movie-web/backend:latest
        restart: unless-stopped
        environment:
