--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -36,6 +36,8 @@
          MWB_POSTGRES__MIGRATE_ON_BOOT: "true"
          MWB_SERVER__TRUSTPROXY: "true"
          MWB_SERVER__TRUSTCLOUDFLARE: "true"
+         # This is needed to resolve errors running migrations on some platforms - does not affect the application 
+         MIKRO_ORM_MIGRATIONS_DISABLE_FOREIGN_KEYS: "true"
        ports:
          - "8080:8080"
        depends_on:
