--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -37,7 +37,7 @@
          MWB_SERVER__TRUSTPROXY: "true"
          MWB_SERVER__TRUSTCLOUDFLARE: "true"
          # This is needed to resolve errors running migrations on some platforms - does not affect the application 
-         MIKRO_ORM_MIGRATIONS_DISABLE_FOREIGN_KEYS: "true"
+         MIKRO_ORM_MIGRATIONS_DISABLE_FOREIGN_KEYS: "false"
        ports:
          - "8080:8080"
        depends_on:
