--- a/content/5.extra/2.selfhost.md
+++ b/content/5.extra/2.selfhost.md
@@ -64,7 +64,7 @@
        restart: unless-stopped
 
      movie-web-proxy:
-       image: ghcr.io/movie-web/simple-proxy:2.1.4
+       image: ghcr.io/movie-web/simple-proxy:latest
        ports:
          - "3000:3000"
        networks:
