--- a/content/3.client/5.upgrade.md
+++ b/content/3.client/5.upgrade.md
@@ -15,32 +15,44 @@ To do this, you will need to follow the guide below...
 2. Paste the below file into your repository's root `/.github/workflows` directory
 
 ```yaml
-# File: .github/workflows/sync.yml
-name: Sync fork
+name: Merge upstream changes
 
 on:
   schedule:
-  - cron: "0 * * * *" # Run the job every hour
+    - cron: "0 * * * *" # Run the job every hour
   push:
     branches:
-    - "*"
+      - "*"
     paths:
-    - .github/workflows/sync.yml
+      - .github/workflows/sync.yml
 
 jobs:
-  sync:
+  merge_main:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - run: gh repo sync <OWNER>/<FORK> # Replace the placeholders within the < >
-    env:
-      GH_TOKEN: ${{ github.token }}
-    - uses: gautamkrishnar/keepalive-workflow@v1
+      - uses: actions/checkout@v3
+      - name: Merge upstream changes (main)
+        run: |
+          git fetch upstream
+          git merge upstream/main --no-edit
+          git push origin HEAD
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+  merge_providers:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Merge upstream changes (providers)
+        run: |
+          git fetch movie-web/providers
+          git merge movie-web/providers --no-edit
+          git push origin HEAD
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 ```
 
-3. Replace the `<OWNER>` placeholder with the GitHub username of the account that owns the fork.
-4. Replace the `<FORK>` placeholder with the repository name of your fork.
-5. Commit and push the changes to your repository.
+3. Commit and push the changes to your repository.
 
 Your instance should now be automatically updated to the latest version.
 
