--- a/pages/instances.mdx
+++ b/pages/instances.mdx
@@ -18,13 +18,14 @@ The community maintains these trusted instances, meaning they are likely to be u
 
 |                    Instance                       |                                        Host                                         |  Status  |
 | :------------------------------------------------ | :---------------------------------------------------------------------------------- | :------- |
-| [mw.lonelil.ru](https://mw.lonelil.ru)            | [lonelil - Partner](https://github.com/lonelil)                                     | 💾🌐📱     |
-| [watch.qtchaos.de](https://watch.qtchaos.de)      | [chaos - Project Lead](https://github.com/qtchaos)                                  | 💾📱       |
-| [bmov](https://bmov.vercel.app)                   | [TheScreechingBagel - Mod](https://github.com/TheScreechingBagel)                   | 💾🌐      |
-| [stream.thehairy.me](https://stream.thehairy.me)  | [thehairy - Mod](https://github.com/thehairy)                                       | 💾🌐📱     |
-| [movie-web-me](https://movie-web-me.vercel.app)   | [Isra - Contributor](https://github.com/zisra)                                      | 💾🌐      |
-| [scootydooter](https://scootydooter.vercel.app)   | [Toon - Contributor](https://github.com/Toon-arch)                                  | 💾🌐📱     |
-| [sudo-flix.lol](https://sudo-flix.lol)            | [itzCozi - Contributor](https://github.com/sussy-code)                              | 💾📱      |
+| [mw.lonelil.ru](https://mw.lonelil.ru)            | [lonelil - Partner](https://github.com/lonelil)                                     | 💾🌐📱 |
+| [watch.qtchaos.de](https://watch.qtchaos.de)      | [chaos - Project Lead](https://github.com/qtchaos)                                  | 💾📱    |
+| [bmov](https://bmov.vercel.app)                   | [TheScreechingBagel - Mod](https://github.com/TheScreechingBagel)                   | 💾🌐    |
+| [stream.thehairy.me](https://stream.thehairy.me)  | [thehairy - Mod](https://github.com/thehairy)                                       | 💾🌐📱 |
+| [movie-web-me](https://movie-web-me.vercel.app)   | [Isra - Contributor](https://github.com/zisra)                                      | 💾🌐    |
+| [scootydooter](https://scootydooter.vercel.app)   | [Toon - Contributor](https://github.com/Toon-arch)                                  | 💾🌐📱 |
+| [sudo-flix.lol](https://sudo-flix.lol)            | [itzCozi - Contributor](https://github.com/sussy-code)                              | 💾📱    |
+| [film.kace.dev](https://film.kace.dev)            | [userkace](https://github.com/userkace)                                             | 💾🌐    |
 | [movie-web.x](https://movie-web.x)                | [Unstoppable Domains](https://unstoppabledomains.com) and [IPFS](https://ipfs.tech) | 💾       |
 
 <Note>
