--- a/pages/extra/streaming.mdx
+++ b/pages/extra/streaming.mdx
@@ -24,7 +24,7 @@ This method is recommended if you want to host a proxy for your friends and or f
 {/* This method is recommended if you want to host a proxy for your friends and family to use, or if you want to use movie-web on a device that doesn't support the [browser extension](#method-1---browser-extension), such as a smart TV or mobile device.*/}
 
 1. Set up a proxy using one of our [guides](../proxy/deploy.mdx), [though we recommend Netlify](../proxy/deploy.mdx#method-1-netlify-easy).  
-2. Once that's done, go to the **Connections** section of the **Settings page** on your movie-web instance of chocie. 
+2. Once that's done, go to the **Connections** section of the **Settings page** on your movie-web instance of choice. 
 3. Enable `Use custom proxy workers` if it's not already enabled.  
 4. Add a new custom proxy by clicking `Add new worker`.
 5. Copy the URL of the proxy you deployed before, and paste it into the empty text box.
